fixed code block in markdown not having line wrap, and made titles more accessible on mobile by removing line clamp under 800px

--- a/src/components/playtest/card.module.scss
+++ b/src/components/playtest/card.module.scss
@@ -16,10 +16,13 @@
 
     .name {
         font-size: 2em;
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 1;
+
+        @media (width > 800px) {
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 1;
+        }
 
         &:hover { text-decoration: underline }
     }
