--- a/src/components/utils/markdown.module.scss
+++ b/src/components/utils/markdown.module.scss
@@ -38,4 +38,8 @@
         text-transform: uppercase;
         display:inline-block
     }
+
+    pre code {
+        white-space: wrap;
+    }
 }
